# turkish-morphology

./: .bazelrc  .flake8  .gitignore  .style.yapf  .travis.yml  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  WORKSPACE  WORKSPACE.bazel  requirements.txt  setup.py  setup.sh
.github/workflows/: linux.yml  python.yml
analyzer/: BUILD.bazel  build.sh  print_analyses.cc
analyzer/evaluator/: BUILD.bazel  evaluate.py
analyzer/src/lexicon/: BUILD.bazel  README.md  parser.py  parser_test.py  reader.py  reader_test.py  validator.py  validator_test.py
analyzer/src/lexicon/base/: adp_in.tsv  adv_rb.tsv  adv_wrb.tsv  det_wdt.tsv  exs_ex.tsv  noun_nn.tsv  noun_nn_abbr.tsv  noun_nn_abbr_apos.tsv  noun_nn_foreign.tsv  noun_nnp.tsv  noun_nnp_abbr.tsv  num_cd_ord.tsv  pron_prd_pnposs.tsv  pron_pri.tsv  pron_prp_case.tsv  pron_prp_irr.tsv  pron_prr.tsv  punct_punct_2.tsv  punct_punct_4.tsv  punct_punct_5.tsv  verb_vb_hl_ar_dhr.tsv  verb_vb_hl_ar_ht.tsv  verb_vb_hl_ar_t.tsv  verb_vb_hl_hr_dhr.tsv  verb_vb_hl_hr_no.tsv  verb_vb_on_or_dhr.tsv  verb_vb_on_or_t.tsv  x_sym.tsv
analyzer/src/lexicon/testdata/: invalid_empty_features_value.tsv  invalid_empty_is_compound_value.tsv  invalid_empty_root_value.tsv  invalid_is_compound_value.tsv  invalid_missing_features_field.tsv  invalid_missing_morphophonemics_field.tsv  invalid_missing_required_features.tsv  invalid_missing_root_field.tsv  invalid_missing_tag_field.tsv  invalid_only_empty_rows.tsv  invalid_optional_features.tsv  invalid_whitespace_in_features_value.tsv  invalid_whitespace_in_morphophonemics_value.tsv  invalid_whitespace_in_tag_value.tsv  valid_entries_1.tsv  valid_entries_2.tsv
analyzer/src/morphophonemics/: BUILD.bazel  common.grm  consonant_change.grm  consonant_drop.grm  model.grm  vowel_change.grm  vowel_drop.grm
analyzer/src/morphophonemics/testdata/: consonant_change.tsv  consonant_drop.tsv  consonant_voicing.tsv  model.tsv  remove_markup.tsv  vowel_change.tsv  vowel_harmony.tsv  y_insertion.tsv
analyzer/src/morphotactics/: BUILD.bazel  README.md  model_compile.py  model_compile_test.py  parser.py  parser_test.py  reader.py  reader_test.py  rule.proto  validator.py  validator_test.py
analyzer/src/morphotactics/model/: common.txt  existential.txt  nominal_predicate.txt  noun.txt  noun_numberic_stem.txt  number.txt  number_numeric_stem.txt  onomatopoeic.txt  verb.txt
analyzer/src/morphotactics/testdata/: morphotactics_invalid_number_of_tokens.txt  morphotactics_invalid_rule_input.txt  morphotactics_invalid_rule_output.txt  morphotactics_valid_rules_1.txt  morphotactics_valid_rules_2.txt
analyzer/src/symbols/: BUILD.bazel  base_symbols.syms  unicode.grm
bazel/: BUILD.bazel  openfst.BUILD  six.BUILD  thrax.BUILD  thrax.bzl
examples/: BUILD.bazel  analyze_sentence.py  derivational_morphemes.py  generate_sentence.py  inflection_distribution.py  word_stems.py
lib/: BUILD.bazel  analysis.proto  analyze.py  analyze_test.py  decompose.py  decompose_test.py
scripts/: BUILD.bazel  evaluate_analyzer.py  print_analyses.cc  print_analyses.py
src/analyzer/: BUILD.bazel  build.sh
src/analyzer/lexicon/: BUILD.bazel  README.md  parser.py  parser_test.py  reader.py  reader_test.py  tags.py  validator.py  validator_test.py
src/analyzer/lexicon/base/: adj_jj.tsv  adj_jjn.tsv  adv_rb_temp.tsv  affix_pfx.tsv  conj_cc.tsv  det_dt.tsv  det_pdt.tsv  noun_nn_temp.tsv  num_cd.tsv  num_cd_dist.tsv  onom_dup.tsv  pron_prd.tsv  pron_prd_pnon.tsv  pron_prp$.tsv  pron_prp.tsv  pron_wp.tsv  prt_ep.tsv  prt_op.tsv  prt_rpc.tsv  prt_rpneg.tsv  prt_rpq.tsv  punct_punct_1.tsv  punct_punct_3.tsv  punct_punct_6.tsv  punct_punct_7.tsv  punct_punct_8.tsv  verb_vb_hl_ar_hr.tsv  verb_vb_hl_ar_no.tsv  verb_vb_hl_hr_t.tsv  verb_vb_hn_ar_dhr.tsv  verb_vb_hn_hr_dhr.tsv  verb_vb_hn_hr_no.tsv  verb_vb_hn_hr_t.tsv  x_ls.tsv  x_uh.tsv
src/analyzer/lexicon/testdata/: invalid_empty_morphophonemics_value.tsv  invalid_empty_tag_value.tsv  invalid_features_value.tsv  invalid_missing_is_compound_field.tsv  invalid_morphophonemics_value.tsv  invalid_only_header.tsv  invalid_redundant_features.tsv  invalid_required_features.tsv  invalid_tag_value.tsv
src/analyzer/morphophonemics/: BUILD.bazel  common.grm  consonant_voicing.grm  gemination.grm  remove_markup.grm  vowel_change.grm  vowel_harmony.grm  y_insertion.grm
src/analyzer/morphophonemics/testdata/: gemination.tsv  pronunciation.tsv  vowel_drop.tsv
src/analyzer/morphotactics/: BUILD.bazel  README.md  common.py  model_compile.py  model_compile_test.py  parser.py  parser_test.py  reader.py  reader_test.py  rule.proto  validator.py  validator_test.py
src/analyzer/morphotactics/model/: adjective.txt  adposition.txt  adverb.txt  affix.txt  conjunction.txt  determiner.txt  others.txt  particle.txt  pronoun.txt  punctuation.txt
src/analyzer/morphotactics/testdata/: complex_symbols_expected.txt  morphotactics_invalid_only_comments.txt  text_fst_expected.txt
src/analyzer/symbols/: BUILD.bazel  alphabet.grm  case_conversion.grm
src/analyzer/symbols/testdata/: case_conversion.tsv
turkish_morphology/: BUILD.bazel  analysis.proto  analyze.py  analyze_test.py  decompose.py  decompose_test.py  fst.py  generate.py  generate_test.py  pretty_print.py  pretty_print_test.py  validate.py  validate_test.py
turkish_morphology/testdata/: araba_with_proper.pbtxt  araba_without_proper.pbtxt  invalid_affix_missing_feature.pbtxt  invalid_derivational_affix_empty_meta_morpheme.pbtxt  invalid_derivational_affix_missing_meta_morpheme.pbtxt  invalid_derived_ig_missing_derivation.pbtxt  invalid_feature_empty_category.pbtxt  invalid_feature_empty_value.pbtxt  invalid_feature_missing_category.pbtxt  invalid_feature_missing_value.pbtxt  invalid_first_ig_missing_root.pbtxt  invalid_ig_empty_pos.pbtxt  invalid_ig_missing_pos.pbtxt  invalid_oov_root.pbtxt  invalid_root_empty_morpheme.pbtxt  invalid_root_missing_morpheme.pbtxt  yasa_with_proper.pbtxt  yasa_without_proper.pbtxt
