# Copyright 2019 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

exports_files(["LICENSE"])

sh_binary(
    name = "setup",
    srcs = ["setup.sh"],
    data = [
        "LICENSE",
        "setup.py",
        "//turkish_morphology:__init__.py",
        "//turkish_morphology:analysis_py_pb2",
        "//turkish_morphology:analyze",
        "//turkish_morphology:decompose",
        "//turkish_morphology:validate",
    ],
)
