# Copyright 2020 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:private"])

py_binary(
    name = "analyze_sentence",
    srcs = ["analyze_sentence.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        "//turkish_morphology:analyze",
        "@io_abseil_py//absl:app",
    ],
)

py_binary(
    name = "derivational_morphemes",
    srcs = ["derivational_morphemes.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        "//turkish_morphology:analysis_py_pb2",
        "//turkish_morphology:analyze",
        "//turkish_morphology:decompose",
        "@io_abseil_py//absl:app",
    ],
)

py_binary(
    name = "inflection_distribution",
    srcs = ["inflection_distribution.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        "//turkish_morphology:analysis_py_pb2",
        "//turkish_morphology:analyze",
        "//turkish_morphology:decompose",
        "@io_abseil_py//absl:app",
    ],
)

py_binary(
    name = "word_stems",
    srcs = ["word_stems.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        "//turkish_morphology:analysis_py_pb2",
        "//turkish_morphology:analyze",
        "//turkish_morphology:decompose",
        "@io_abseil_py//absl:app",
    ],
)
