# Copyright 2019 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:private"])

py_binary(
    name = "evaluate_analyzer",
    srcs = ["evaluate_analyzer.py"],
    data = [
        ":print_analyses",
        ":treebank",
    ],
    deps = [
        "@io_abseil_py//absl:app",
        "@io_abseil_py//absl/flags",
        "@io_abseil_py//absl/logging",
    ],
)

cc_binary(
    name = "print_analyses",
    srcs = ["print_analyses.cc"],
    data = [
        "//src/analyzer:build_fst",
    ],
    deps = [
        "@com_google_absl//absl/strings",
        "@openfst//:fst",
        "@thrax//:grm-manager",
    ],
)

filegroup(
    name = "treebank",
    srcs = glob(["treebank/*.conll"]),
)
