# Copyright 2020 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

exports_files(["__init__.py"])

py_proto_library(
    name = "analysis_py_pb2",
    srcs = ["analysis.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

py_library(
    name = "analyze",
    srcs = ["analyze.py"],
    srcs_version = "PY3",
    deps = [
        ":fst",
    ],
)

py_test(
    name = "analyze_test",
    size = "small",
    srcs = ["analyze_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":analyze",
        "@io_abseil_py//absl/testing:absltest",
        "@io_abseil_py//absl/testing:parameterized",
    ],
)

py_library(
    name = "decompose",
    srcs = ["decompose.py"],
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
    ],
)

py_test(
    name = "decompose_test",
    size = "small",
    srcs = ["decompose_test.py"],
    data = [
        ":test_analyses",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
        ":decompose",
        "@io_abseil_py//absl/testing:absltest",
        "@io_abseil_py//absl/testing:parameterized",
    ],
)

py_library(
    name = "fst",
    srcs = ["fst.py"],
    data = [
        "//src/analyzer:build_fst",
    ],
    srcs_version = "PY3",
    deps = [
        "@openfst//:pywrapfst",
    ],
)

py_library(
    name = "generate",
    srcs = ["generate.py"],
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
        ":fst",
        ":pretty_print",
        "@openfst//:pywrapfst",
    ],
)

py_test(
    name = "generate_test",
    size = "small",
    srcs = ["generate_test.py"],
    data = [
        ":test_analyses",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
        ":generate",
        "@io_abseil_py//absl/testing:absltest",
        "@io_abseil_py//absl/testing:parameterized",
    ],
)

filegroup(
    name = "test_analyses",
    srcs = glob([
        "testdata/*.pbtxt",
    ]),
)

py_library(
    name = "pretty_print",
    srcs = ["pretty_print.py"],
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
    ],
)

py_test(
    name = "pretty_print_test",
    size = "small",
    srcs = ["pretty_print_test.py"],
    data = [
        ":test_analyses",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
        ":pretty_print",
        "@io_abseil_py//absl/testing:absltest",
        "@io_abseil_py//absl/testing:parameterized",
    ],
)

py_library(
    name = "validate",
    srcs = ["validate.py"],
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
    ],
)

py_test(
    name = "validate_test",
    size = "small",
    srcs = ["validate_test.py"],
    data = [
        ":test_analyses",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":analysis_py_pb2",
        ":validate",
        "@io_abseil_py//absl/testing:absltest",
        "@io_abseil_py//absl/testing:parameterized",
    ],
)
