# Copyright 2019 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//scripts:__pkg__"])

sh_binary(
    name = "build",
    srcs = ["build.sh"],
    data = [
        "//src/analyzer/morphophonemics:model_grm_compile",
        "//src/analyzer/morphotactics:model_compile",
        "//src/analyzer/symbols:base_symbols",
        "//src/analyzer/symbols:case_conversion_grm_compile",
        "//src/analyzer/symbols:unicode_grm_compile",
        "@openfst//:farcreate",
        "@openfst//:farextract",
        "@openfst//:fstarcsort",
        "@openfst//:fstcompile",
        "@openfst//:fstcompose",
        "@openfst//:fstdeterminize",
        "@openfst//:fstencode",
        "@openfst//:fstinvert",
        "@openfst//:fstminimize",
        "@openfst//:fstprint",
        "@openfst//:fstrmepsilon",
    ],
)

# Below genrule builds the Turkish morphological analyzer FST, creates a FAR
# file which contains this FST that is accessible through the rule name
# 'turkish_morphological_analyzer' and writes the FAR file to
# '//src/analyzer/bin/turkish.far'.
genrule(
    name = "build_fst",
    srcs = [],
    outs = ["bin/turkish.far"],
    cmd = """
          if [ ! -f $(@) ]; then
             $(location //src/analyzer:build) $(@D);
          fi
          """,
    tools = ["//src/analyzer:build"],
)
