# Copyright 2019 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = [
    "//analyzer:__pkg__",
    "//analyzer/src/morphophonemics:__pkg__",
])

licenses(["notice"])  # Apache 2.0

load("//bazel:thrax.bzl", "grm_compile", "grm_test")

# Data.
# Base symbols table should only include the exact set of characters that can
# be observed in all possible input words to the morphological analyzer.
filegroup(
    name = "base_symbols",
    srcs = ["base_symbols.syms"],
)

# Grammars.
grm_compile(
    name = "alphabet",
    deps = [
        "unicode.far",
        "unicode.grm",
    ],
)

grm_compile(
    name = "case_conversion",
    deps = [
        "alphabet.far",
        "alphabet.grm",
        "unicode.far",
        "unicode.grm",
    ],
)

grm_compile(
    name = "unicode",
)

# Tests.
grm_test(
    name = "case_conversion_test",
    base_path = "analyzer/src/symbols/",
    far_file = "case_conversion.far",
    test_file = "case_conversion.tsv",
)
