# Copyright 2019 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@turkish_morphology_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//src/analyzer/morphotactics:__pkg__"])

licenses(["notice"])  # Apache 2.0

# Data.
filegroup(
    name = "base_lexicon",
    srcs = glob([
        "base/*.tsv",
    ]),
)

filegroup(
    name = "contrib_lexicon",
    srcs = glob([
        "contrib/*.tsv",
    ]),
)

filegroup(
    name = "test_lexicons",
    srcs = glob([
        "testdata/*.tsv",
    ]),
)

# Libraries.
py_library(
    name = "parser",
    srcs = ["parser.py"],
    srcs_version = "PY3",
    deps = [
        ":tags",
        "//src/analyzer/morphotactics:common",
        "//src/analyzer/morphotactics:rule_py_pb2",
    ],
)

py_library(
    name = "reader",
    srcs = ["reader.py"],
    srcs_version = "PY3",
)

py_library(
    name = "tags",
    srcs = ["tags.py"],
    srcs_version = "PY3",
)

py_library(
    name = "validator",
    srcs = ["validator.py"],
    srcs_version = "PY3",
    deps = [
        ":tags",
    ],
)

# Tests.
py_test(
    name = "parser_test",
    size = "small",
    srcs = ["parser_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":parser",
        ":tags",
        "//src/analyzer/morphotactics:rule_py_pb2",
        "@io_abseil_py//absl/testing:absltest",
        requirement("parameterized"),
    ],
)

py_test(
    name = "reader_test",
    size = "small",
    srcs = ["reader_test.py"],
    data = [
        ":test_lexicons",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":reader",
        "@io_abseil_py//absl/testing:absltest",
        requirement("parameterized"),
    ],
)

py_test(
    name = "validator_test",
    size = "small",
    srcs = ["validator_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":tags",
        ":validator",
        "@io_abseil_py//absl/testing:absltest",
        requirement("parameterized"),
    ],
)
