# Copyright 2019 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:thrax.bzl", "grm_compile")
load("@org_opengrm_thrax//:src/bazel/regression_test_build_defs.bzl", "grm_regression_test")

package(default_visibility = ["//src/analyzer:__pkg__"])

grm_compile(
    name = "common",
    deps = [
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_compile(
    name = "consonant_change",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "consonant_change_test",
    grammar = ":consonant_change",
)

grm_compile(
    name = "consonant_drop",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "consonant_drop_test",
    grammar = ":consonant_drop",
)

grm_compile(
    name = "consonant_voicing",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "consonant_voicing_test",
    grammar = ":consonant_voicing",
)

grm_compile(
    name = "gemination",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "gemination_test",
    grammar = ":gemination",
)

grm_compile(
    name = "model",
    deps = [
        "common.far",
        "common.grm",
        "consonant_change.far",
        "consonant_change.grm",
        "consonant_drop.far",
        "consonant_drop.grm",
        "consonant_voicing.far",
        "consonant_voicing.grm",
        "gemination.far",
        "gemination.grm",
        "remove_markup.far",
        "remove_markup.grm",
        "vowel_change.far",
        "vowel_change.grm",
        "vowel_drop.far",
        "vowel_drop.grm",
        "vowel_harmony.far",
        "vowel_harmony.grm",
        "y_insertion.far",
        "y_insertion.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "model_test",
    grammar = ":model",
)

grm_compile(
    name = "remove_markup",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "remove_markup_test",
    grammar = ":remove_markup",
)

grm_compile(
    name = "vowel_change",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "vowel_change_test",
    grammar = ":vowel_change",
)

grm_compile(
    name = "vowel_drop",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "vowel_drop_test",
    grammar = ":vowel_drop",
)

grm_compile(
    name = "vowel_harmony",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "vowel_harmony_test",
    grammar = ":vowel_harmony",
)

grm_compile(
    name = "y_insertion",
    deps = [
        "common.far",
        "common.grm",
        "//src/analyzer/symbols:alphabet.far",
        "//src/analyzer/symbols:alphabet.grm",
        "//src/analyzer/symbols:unicode.far",
        "//src/analyzer/symbols:unicode.grm",
    ],
)

grm_regression_test(
    name = "y_insertion_test",
    grammar = ":y_insertion",
)
